# macosx

./: Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  wifi.json
.github/workflows/: continuous-integration-go.yaml  continuous-integration.yaml
docs/: 404.html  index.html
docs/404/: index.html
docs/500/: index.html
docs/_next/data/DqTFxRWNwBs_epS8CEigo/: version.json
docs/_next/data/FNxori9nvPVQguxMwf2RG/: version.json
docs/_next/data/GiuMbZ9gHNxAJ0NPVG7TH/: version.json
docs/_next/data/HAB-gL_FpqX8vokPcoGgv/: version.json
docs/_next/data/O0Ov3OcT8yHOzuIeuvRkV/: version.json
docs/_next/data/OIabyTvY00VrpierxQH05/: version.json
docs/_next/data/S8R2qlJaTXYTHkm6s1zgL/: version.json
docs/_next/data/imtYcwGFrFEvpxLi7jHaN/: version.json
docs/_next/data/jF0wPg_Oe3_DJmbOBaB9r/: version.json
docs/_next/data/jZr7S-Q9UWJAr-h2kPsoo/: version.json
docs/_next/data/mA7qdnb6pJ_ebNpYEwH8S/: version.json
docs/_next/data/m_8wBgCdqI9UHI3X-7LlR/: version.json
docs/_next/data/mucaHYkx2baOyqPrkT0Mq/: version.json
docs/_next/data/qY4UQgGC5JFMlHuahcqku/: version.json
docs/_next/data/xESLiKLnfcf9MQQspJT6j/: version.json
docs/_next/data/yVgNem7me3tuKds3UfcYl/: version.json
docs/_next/data/z_J5FVZxd1M-FW0h-Hb-L/: version.json
docs/_next/static/DqTFxRWNwBs_epS8CEigo/: _buildManifest.js
docs/_next/static/GiuMbZ9gHNxAJ0NPVG7TH/: _buildManifest.js
docs/app/: index.html
docs/clipboard/: index.html
docs/downloads/: index.html
docs/version/: index.html
docs/wifi/: index.html
macos/: wifi.swift
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  wifi.entitlements
src-tauri/src/: main.rs
src/pages/: _app.tsx  index.tsx
src/pages/clipboard/: index.tsx
src/pages/wifi/: index.tsx
(+170 files in other folders)
