[package]
name = "macosx"
version = "0.0.1"
description = "macOSX"
authors = ["hieudoanm <hieumdoan@gmail.com> (https://hieudoanm.github.io)"]
license = "GPL-3.0"
repository = "git@github.com:hieudoanm/macosx.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
chrono = "0.4.41"
dirs = "6.0.0"
copypasta = "0.10.2"
glib = "0.20.0"
