[package]
name = "macosx"
version = "0.0.1"
description = "macOSX"
authors = ["hieudoanm <hieumdoan@gmail.com> (https://hieudoanm.github.io)"]
license = "GPL-3.0"
repository = "git@github.com:hieudoanm/macosx.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
chrono = { version = "=0.4.42" }
copypasta = { version = "=0.10.2" }
dirs = { version = "=6.0.0" }
glib = { version = "=0.21.1" }
log = { version = "=0.4.28" }
serde = { version = "=1.0.224", features = ["derive"] }
serde_json = { version ="=1.0.145" }
tauri = { version = "=2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = { version = "=2.7.0" }
